part of domain;

// used because i want to create a type union equivilant in typescript for usage in the cache's value to make sure its currect type shape
sealed class Cacheable {}
